packages/ui/tests/fixtures/negative/sdk-side-effect.fixture.ts
import /* comment-separated-side-effect */ "@deepwork/sdk";
export { unavailableQueryPort } from /* comment-separated-re-export */ "@deepwork/sdk";
